# dafny-sketcher

./: pyproject.toml
cli/: Program.cs  Utility.cs
vfp/: README_bench_claude_code.md  __init__.py  bench_buggy.py  bench_case_repair.py  bench_claude_code.py  bench_claude_code_helper.py  bench_driver.py  bench_effectful.py  bench_effectful_baseline.py  bench_effectful_plan.py  bench_induction_on.py  bench_paradox_process.py  calc_checker.py  dafny_utils.py  dependency_graph.py  driver.py  error_parser.py  henri.py  henri_bench.py  llm.py  sketcher.py  test_binary_search_proof.py
vfp/bench_helpers/: DivisibilityTransitive.dfy  TailNilLemma.dfy
vfp/buggy_bench/: factorial_buggy_1.dfy  factorial_buggy_2.dfy  palindrome_buggy.dfy  power_buggy_1.dfy  power_buggy_2.dfy  power_buggy_3.dfy  rle_buggy_1.dfy  rle_buggy_2.dfy  sumseq_buggy_1.dfy  sumseq_buggy_2.dfy
vfp/examples/: conclusions-bug.dfy  exampleBST.dfy  exampleBSTModular.dfy  induction-sketch-fails.dfy
